--- a/css/home.css
+++ b/css/home.css
@@ -19,7 +19,7 @@
     align-items: center;
     width: 100vw;
     min-height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 /* CONTEUDO */
