--- a/css/home.css
+++ b/css/home.css
@@ -40,8 +40,9 @@
 }
 
 .conteudo__img img {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    /* max-width: 100%; */
+    /* height: auto; */
     border-radius: 3px;
 }
 
