--- a/css/home.css
+++ b/css/home.css
@@ -40,9 +40,8 @@
 }
 
 .conteudo__img img {
-    width: 100%;
-    /* max-width: 100%; */
-    /* height: auto; */
+    max-width: 100%;
+    height: auto;
     border-radius: 3px;
 }
 
