--- a/css/home.css
+++ b/css/home.css
@@ -34,13 +34,14 @@
 }
 
 .conteudo__img {
+    width: 100vw;
     display: flex;
     justify-content: center;
-    width: 100vw;
+    align-items: center;
 }
 
 .conteudo__img img {
-    max-width: 100%;
+    max-width: 70vw;
     height: auto;
     border-radius: 3px;
 }
