--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -1,7 +1,6 @@
 
 * {
     box-sizing: border-box;
-    flex-wrap: wrap;
 }
 
 /* CABEÇALHO */
@@ -32,8 +31,15 @@
     font-size: 1.3rem;
     text-decoration: none;
     font-family: "Raleway";
-    font-weight: bold;
+    font-weight: normal;
     color: #1351d8;
+}
+
+.cabecalho__nav a:hover {
+    color: #1351d8;
+    background-color: rgb(239, 217, 189);
+    border-radius: 4px;
+    transition: 2s;
 }
 
 @media only screen and (min-width: 400px) and (max-width: 800px) {
