--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -36,10 +36,10 @@
 }
 
 .cabecalho__nav a:hover {
-    color: #1351d8;
-    background-color: rgb(239, 217, 189);
+    color: white;
+    background-color: #1351d8;
     border-radius: 4px;
-    transition: 2s;
+    transition: 1s;
 }
 
 @media only screen and (min-width: 400px) and (max-width: 800px) {
