--- a/css/contato.css
+++ b/css/contato.css
@@ -42,6 +42,9 @@ section {
     flex-direction: column;
     width: 400px;
     gap: 10px;
+    box-shadow: 0px 0px 1px black;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 .conteudo__formulario h1 {
@@ -58,9 +61,13 @@ section {
 .conteudo__formulario input, select, textarea{
     box-sizing: border-box;
     min-width: 100%;
-    padding: 10px;
+    padding: 15px;
     border-radius: 10px;
     border-style: solid;
+}
+
+.conteudo__formulario textarea {
+    height: 100px;
 }
 
 .button {
@@ -69,5 +76,14 @@ section {
     padding: 10px;
     border-radius: 3px;
     align-self: flex-end;
+    background-color: #4c7fec;
+    color: white;
+}
+
+.button:hover {
+    color: white;
+    border: 2px solid black;
     background-color: #1351d8;
+    width: 31%;
+    transition: 0.5s;
 }
