--- a/css/lancamento.css
+++ b/css/lancamento.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .conteudo {
