--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -50,7 +50,7 @@
 
     .cabecalho__nav a {
         font-size: 1rem;
-        font-weight: bold;
+        /* font-weight: bold; */
     }   
 
     .cabecalho__img > img {
